Fix for too long keywords in the advanced search form
Issue: https://github.com/geonetwork/core-geonetwork/issues/2918

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -123,6 +123,16 @@
 
     }
   }
+  .bootstrap-tagsinput {
+    .tag {
+      white-space: normal;
+      display: inline-flex;
+      text-align: left;
+      line-height: 1.5em;
+      // float: left;
+      margin-bottom: 3px;
+    }
+  }
 }
 
 .gn-row-filters {
